--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -5,6 +5,7 @@ html(lang="en")
     meta(name="viewport" content="width=device-width, initial-scale=1.0")
     title Dashboard
     link(rel="stylesheet" href="/src/css/style.css")
+    meta(name="description" content="Dashboard for managing customers")
     script(src="https://kit.fontawesome.com/55a3fd6aba.js" crossorigin="anonymous")
   body
     .dashboard
